<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Stopwatch Results Saver</string>
    <string name="action_settings">Settings</string>
    <string name="modes">Modes:</string>
    <string name="button_stopwatch">Stopwatch</string>
    <string name="button_timer">Timer</string>
    <string name="button_results">Results</string>
    <string name="display_seconds">00:00:00</string>
    <string name="display_milis">000</string>
    <string name="settings_text">Settings</string>
    <string name="button_start_text_start">START</string>
    <string name="button_set_text">SET..</string>
    <string name="button_save">Save results</string>
    <string name="hello_world">Hello world!</string>
    <string name="splits">Laps / splits :</string>
    <string name="settings_text_stopwatch">Set stopwatch..</string>
    <string name="settings_text_timer">Set timer..</string>
    <string name="title_activity_browse_results">Browse Results</string>

</resources>
